fix: use secretKeyRef instead of configMapKeyRef

--- a/charts/forms-flow-analytics/templates/deployment.yaml
+++ b/charts/forms-flow-analytics/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
         - name: REDASH_DATABASE_PASSWORD
           {{- if and .Values.postgresql.externalSecret .Values.postgresql.externalSecret.name .Values.postgresql.externalSecret.passwordKey }}
           valueFrom:
-            configMapKeyRef:
+            secretKeyRef:
               key: {{ .Values.postgresql.externalSecret.passwordKey }}
               name: "{{ .Values.postgresql.externalSecret.name }}"
           {{- else }}
