--- a/charts/forms-flow-api/templates/deployment.yaml
+++ b/charts/forms-flow-api/templates/deployment.yaml
@@ -54,7 +54,7 @@ spec:
         - name: DATABASE_PASSWORD
           {{- if and .Values.postgresql.externalSecret .Values.postgresql.externalSecret.name .Values.postgresql.externalSecret.passwordKey }}
           valueFrom:
-            configMapKeyRef:
+            secretKeyRef:
               key: {{ .Values.postgresql.externalSecret.passwordKey }}
               name: "{{ .Values.postgresql.externalSecret.name }}"
           {{- else }}
