--- a/charts/forms-flow-idm/Chart.yaml
+++ b/charts/forms-flow-idm/Chart.yaml
@@ -9,4 +9,5 @@ dependencies:
   - name: postgresql-ha 
     repository: https://charts.bitnami.com/bitnami
     version: 10.0.9
+    condition: postgresql-ha.enabled
 icon: "https://raw.githubusercontent.com/AOT-Technologies/forms-flow-ai/develop/.images/logo.png"
