--- a/charts/forms-flow-analytics/templates/deployment.yaml
+++ b/charts/forms-flow-analytics/templates/deployment.yaml
@@ -113,7 +113,7 @@ spec:
         - name: REDASH_DATABASE_PASSWORD
           {{- if and .Values.postgresql.externalSecret .Values.postgresql.externalSecret.name .Values.postgresql.externalSecret.passwordKey }}
           valueFrom:
-            configMapKeyRef:
+            secretKeyRef:
               key: {{ .Values.postgresql.externalSecret.passwordKey }}
               name: "{{ .Values.postgresql.externalSecret.name }}"
           {{- else }}
@@ -174,7 +174,7 @@ spec:
         - name: REDASH_DATABASE_PASSWORD
           {{- if and .Values.postgresql.externalSecret .Values.postgresql.externalSecret.name .Values.postgresql.externalSecret.passwordKey }}
           valueFrom:
-            configMapKeyRef:
+            secretKeyRef:
               key: {{ .Values.postgresql.externalSecret.passwordKey }}
               name: "{{ .Values.postgresql.externalSecret.name }}"
           {{- else }}
@@ -235,7 +235,7 @@ spec:
         - name: REDASH_DATABASE_PASSWORD
           {{- if and .Values.postgresql.externalSecret .Values.postgresql.externalSecret.name .Values.postgresql.externalSecret.passwordKey }}
           valueFrom:
-            configMapKeyRef:
+            secretKeyRef:
               key: {{ .Values.postgresql.externalSecret.passwordKey }}
               name: "{{ .Values.postgresql.externalSecret.name }}"
           {{- else }}
@@ -294,7 +294,7 @@ spec:
         - name: REDASH_DATABASE_PASSWORD
           {{- if and .Values.postgresql.externalSecret .Values.postgresql.externalSecret.name .Values.postgresql.externalSecret.passwordKey }}
           valueFrom:
-            configMapKeyRef:
+            secretKeyRef:
               key: {{ .Values.postgresql.externalSecret.passwordKey }}
               name: "{{ .Values.postgresql.externalSecret.name }}"
           {{- else }}
