--- a/charts/forms-flow-analytics/templates/deployment.yaml
+++ b/charts/forms-flow-analytics/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
           value: "{{ .Values.postgresql.password }}"
           {{- end }}
         - name: REDASH_DATABASE_URL
-          value: "postgresql://$(REDASH_DATABASE_USERNAME):$(REDASH_DATABASE_PASSWORD)@{{.Values.postgresql.host}}:{{.Values.postgresql.port}}/{{.Chart.Name}}"
+          value: "postgresql://$(REDASH_DATABASE_USERNAME):$(REDASH_DATABASE_PASSWORD)@{{.Values.postgresql.host}}:{{.Values.postgresql.port}}/{{.Values.postgresql.database}}"
         - name: REDASH_WEB_WORKERS
           value: "4"
         - name: GUNICORN_CMD_ARGS
@@ -120,7 +120,7 @@ spec:
           value: "{{ .Values.postgresql.password }}"
           {{- end }}
         - name: REDASH_DATABASE_URL
-          value: "postgresql://$(REDASH_DATABASE_USERNAME):$(REDASH_DATABASE_PASSWORD)@{{.Values.postgresql.host}}:{{.Values.postgresql.port}}/{{.Chart.Name}}"
+          value: "postgresql://$(REDASH_DATABASE_USERNAME):$(REDASH_DATABASE_PASSWORD)@{{.Values.postgresql.host}}:{{.Values.postgresql.port}}/{{.Values.postgresql.database}}"
         - name: WORKERS_COUNT
           value: "2"
         image: "{{ .Values.redash.image.registry}}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}"
@@ -181,7 +181,7 @@ spec:
           value: "{{ .Values.postgresql.password }}"
           {{- end }}
         - name: REDASH_DATABASE_URL
-          value: "postgresql://$(REDASH_DATABASE_USERNAME):$(REDASH_DATABASE_PASSWORD)@{{.Values.postgresql.host}}:{{.Values.postgresql.port}}/{{.Chart.Name}}"
+          value: "postgresql://$(REDASH_DATABASE_USERNAME):$(REDASH_DATABASE_PASSWORD)@{{.Values.postgresql.host}}:{{.Values.postgresql.port}}/{{.Values.postgresql.database}}"
         - name: WORKERS_COUNT
           value: "1"
         image: "{{ .Values.redash.image.registry}}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}"
@@ -242,7 +242,7 @@ spec:
           value: "{{ .Values.postgresql.password }}"
           {{- end }}
         - name: REDASH_DATABASE_URL
-          value: "postgresql://$(REDASH_DATABASE_USERNAME):$(REDASH_DATABASE_PASSWORD)@{{.Values.postgresql.host}}:{{.Values.postgresql.port}}/{{.Chart.Name}}"
+          value: "postgresql://$(REDASH_DATABASE_USERNAME):$(REDASH_DATABASE_PASSWORD)@{{.Values.postgresql.host}}:{{.Values.postgresql.port}}/{{.Values.postgresql.database}}"
         image: "{{ .Values.redash.image.registry}}/{{ .Values.redash.image.repository }}:{{ .Values.redash.image.tag }}"
         name: "{{ .Chart.Name }}-scheduler"
         resources:
@@ -301,7 +301,7 @@ spec:
           value: "{{ .Values.postgresql.password }}"
           {{- end }}
         - name: REDASH_DATABASE_URL
-          value: "postgresql://$(REDASH_DATABASE_USERNAME):$(REDASH_DATABASE_PASSWORD)@{{.Values.postgresql.host}}:{{.Values.postgresql.port}}/{{.Chart.Name}}"
+          value: "postgresql://$(REDASH_DATABASE_USERNAME):$(REDASH_DATABASE_PASSWORD)@{{.Values.postgresql.host}}:{{.Values.postgresql.port}}/{{.Values.postgresql.database}}"
         - name: QUEUES
           value: "periodic_emails,default"
         - name: WORKERS_COUNT
