--- a/charts/forms-flow-ai/Chart.yaml
+++ b/charts/forms-flow-ai/Chart.yaml
@@ -5,6 +5,7 @@ dependencies:
   - name: postgresql-ha 
     repository: https://charts.bitnami.com/bitnami
     version: 10.0.9
+    condition: postgresql-ha.enabled
   - name: mongodb
     condition: mongodb.enabled 
     repository: https://charts.bitnami.com/bitnami
