--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -7,7 +7,7 @@ data:
   DATABASE_NAME: {{ ternary (tpl .Values.formsflowdb.postgresql.database .) "<DEFINE_ME>" .Values.formsflowdb.postgresql.enabled | quote }}
   DATABASE_PORT: {{ ternary .Values.formsflowdb.service.ports.postgresql "<DEFINE_ME>" .Values.formsflowdb.postgresql.enabled | quote }}
   DATABASE_SERVICE_NAME: {{ ternary (tpl .Values.formsflowdb.postgresql.fullnameOverride .) "<DEFINE_ME>" .Values.formsflowdb.postgresql.enabled | quote }}
-  BPM_API_URL: https://forms-flow-bpm-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}/camunda
+  BPM_API_URL: https://{{ tpl (index .Values "forms-flow-bpm" "ingress" "hostname") .}}/camunda
   KEYCLOAK_JWT_OIDC_ALGORITHMS: "RS256"
   KEYCLOAK_JWT_OIDC_CACHING_ENABLED: "True"
   KEYCLOAK_JWT_OIDC_JWKS_CACHE_TIMEOUT: "300"
@@ -17,27 +17,27 @@ data:
   KEYCLOAK_TOKEN_URL: https://{{ tpl (index .Values "forms-flow-idm" "keycloak" "ingress" "hostname") . }}/auth/realms/{{ index .Values "forms-flow-idm" "realm" }}/protocol/openid-connect/token
   KEYCLOAK_URL: https://{{ tpl (index .Values "forms-flow-idm" "keycloak" "ingress" "hostname") . }}
   KEYCLOAK_URL_REALM: {{ index .Values "forms-flow-idm" "realm" }}
-  FORMIO_URL: https://forms-flow-forms-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
-  FORMIO_DOMAIN: https://forms-flow-forms-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
-  WEB_API_URL: https://forms-flow-api-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
+  FORMIO_URL: https://{{tpl (index .Values "forms-flow-forms" "ingress" "hostname") .}}
+  FORMIO_DOMAIN: https://{{tpl (index .Values "forms-flow-forms" "ingress" "hostname") .}}
+  WEB_API_URL: https://{{tpl (index .Values "forms-flow-api" "ingress" "hostname") .}}
   MONGODB_URI:  {{ ternary (tpl "mongodb://{{ .Values.mongodb.auth.usernames | first }}:{{ .Values.mongodb.auth.passwords | first }}@{{ .Values.mongodb.service.nameOverride }}:{{ .Values.mongodb.service.ports.mongodb }}/{{ .Values.mongodb.auth.databases | first }}" .) "<DEFINE_ME>" .Values.mongodb.enabled | quote }} 
   {{- if .Values.mongodb.enabled }} 
   NODE_CONFIG: '{"mongo":"mongodb://{{ .Values.mongodb.auth.usernames | first }}:{{ .Values.mongodb.auth.passwords | first }}@{{ .Values.mongodb.service.nameOverride }}:{{ .Values.mongodb.service.ports.mongodb }}/{{ .Values.mongodb.auth.databases | first }}"}'
   {{- else }}
   NODE_CONFIG: "<DEFINE_ME>"
   {{- end }}
-  FORMSFLOW_WEB_URL: https://forms-flow-web-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
-  FORMSFLOW_ADMIN_URL: https://forms-flow-admin-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}/api/v1
-  FORMSFLOW_ADMIN_BASE: https://forms-flow-admin-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}/api
+  FORMSFLOW_WEB_URL: https://{{tpl (index .Values "forms-flow-web" "ingress" "hostname") .}}
+  FORMSFLOW_ADMIN_URL: https://{{tpl (index .Values "forms-flow-admin" "ingress" "hostname") .}}/api/v1
+  FORMSFLOW_ADMIN_BASE: https://{{tpl (index .Values "forms-flow-admin" "ingress" "hostname") .}}/api
   MODEL_ID: "Seethal/sentiment_analysis_generic_dataset"
-  INSIGHT_API_URL: https://forms-flow-analytics-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
+  INSIGHT_API_URL: https://{{tpl (index .Values "forms-flow-analytics" "ingress" "hostname") .}}
   KEYCLOAK_ENABLE_CLIENT_AUTH: "false"
   MULTI_TENANCY_ENABLED: "false"
-  DATA_ANALYSIS_URL:  https://forms-flow-data-analysis-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
+  DATA_ANALYSIS_URL:  https://{{tpl (index .Values "forms-flow-data-analysis" "ingress" "hostname") .}}
   NODE_ENV: "production"
   CUSTOM_SUBMISSION_URL: ""
   CUSTOM_SUBMISSION_ENABLED: "false"
-  FORMSFLOW_DOC_API_URL: https://forms-flow-documents-api-{{.Release.Namespace}}.{{tpl (.Values.Domain) .}}
+  FORMSFLOW_DOC_API_URL: https://{{tpl (index .Values "forms-flow-documents-api" "ingress" "hostname") .}}
   DRAFT_ENABLED: "{{.Values.draft_enabled}}"
   DRAFT_POLLING_RATE: "15000"
   EXPORT_PDF_ENABLED: "{{.Values.export_pdf_enabled}}"
