--- a/charts/forms-flow-admin/values.yaml
+++ b/charts/forms-flow-admin/values.yaml
@@ -33,4 +33,4 @@ ingress:
 image:
   registry: docker.io
   repository: formsflow/forms-flow-ai-admin
-  tag: v5.2.1-alpha #The image tag to pull from
+  tag: v5.3.0 #The image tag to pull from
